# drinkdrinkdrink

./: .gitignore  README.md  build.sh  manage.py  pyproject.toml  render.yaml
articles/: models.py  serializers.py  urls.py  views.py
articles/migrations/: 0001_initial.py
category/: models.py  serializers.py  urls.py  views.py
drink3/: asgi.py  settings.py  urls.py  wsgi.py
static/: readme.txt
users/: admin.py  models.py  serializers.py  tests.py  tokens.py  urls.py  views.py
users/migrations/: 0001_initial.py
