[tool.poetry]
name = "drink3"
version = "0.0.0"
description = "23.05.08. 내배캠 drf 프로젝트"
authors = ["Tae seokyoung <xotjrud@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
djangorestframework-simplejwt = "^5.2.2"
pylint = "^2.17.4"
django-cors-headers = "^3.14.0"
dj-database-url = "^2.0.0"
psycopg2-binary = "^2.9.6"
whitenoise = {extras = ["brotli"], version = "^6.4.0"}
django = "~4.0"
Pillow = "^9.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
